# canboy

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: Bus.h  Emu.h  cartridge.h  instructions.h  io.h  lr35902.h  ppu.h  registers.h  renderer.h  timer.h
src/: Bus.cpp  Emu.cpp  cartridge.cpp  instructions.cpp  io.cpp  lr35902.cpp  main.cpp  ppu.cpp  registers.cpp  renderer.cpp  test.gb  timer.cpp
